attempting search function

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <body>
     <div class="container-fluid">
       <h1 class="text-center">Giphy Party!</h1>
-      <form action="" id="search" class="text-center">
+      <form action="" id="search-form" class="text-center">
         <input type="text" name="" id="search-value">
         <button type="submit" id="submit">Submit</button>
       </form>
+      <hr>
       <!-- <img src="" alt="" id="giph"> -->
       <div id="giph-loc"></div>
 
