added remove button, added basic error handling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <form action="" id="search-form" class="text-center">
         <input type="text" name="" id="search-value">
         <button type="submit" id="submit">Submit</button>
+        <button id="remove">Reomve Images</button>
       </form>
       <hr>
       <!-- <img src="" alt="" id="giph"> -->
